tests/ui/discord-frontend/entity_macro/expected_literal_5.stderr
error: expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_3.rs:37:16
   |
LL |     exclude = [true],
   |                ^^^^

error: aborting due to 1 previous error

